--- a/app/css/main.css
+++ b/app/css/main.css
@@ -301,6 +301,10 @@ a:hover {
   max-width: 550px;
 }
 
+.portfolio-section.mobile {
+  display: none;
+}
+
 .portfolio-section .portfolio-sort {
   padding: 60px 0;
 }
@@ -337,6 +341,53 @@ a:hover {
 
 .portfolio-section .portfolio-sort .sort-by li a:hover {
   color: #c14d9c;
+}
+
+.portfolio-info-pop-up {
+  display: flex;
+  height: 100vh;
+  margin: 0;
+}
+
+.portfolio-info-pop-up .modal-content {
+  border: none;
+  border-radius: 0;
+}
+
+.portfolio-info-pop-up .modal-body {
+  padding-top: 0;
+}
+
+.portfolio-info-pop-up .modal-body figure,
+    .portfolio-info-pop-up .modal-body img {
+  width: 100%;
+}
+
+.portfolio-info-pop-up .modal-body h5 {
+  font-weight: 700;
+  font-size: 24px;
+  color: #c14d9c;
+}
+
+.portfolio-info-pop-up .modal-body p {
+  font-size: 16px;
+  color: #676766;
+}
+
+.portfolio-info-pop-up .modal-body a {
+  color: #c14d9c;
+}
+
+.portfolio-info-pop-up .modal-header {
+  border-bottom: 0;
+}
+
+.portfolio-info-pop-up .modal-header .close span {
+  color: #b63582;
+}
+
+.portfolio-info-pop-up .modal-title {
+  color: #b63582;
 }
 
 .portfolio-tiles {
@@ -383,6 +434,7 @@ a:hover {
 
 .portfolio-tiles .tile .tile-inner figure img {
   width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -1480,6 +1532,14 @@ a:hover {
 
   .portfolio-section {
     padding-top: 40px;
+  }
+
+  .portfolio-section.web {
+    display: none;
+  }
+
+  .portfolio-section.mobile {
+    display: flex;
   }
 
   .portfolio-sort {
