--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -328,6 +328,9 @@ a {
 }
 
 .portfolio-section {
+    &.mobile{
+        display: none;
+    }
     .portfolio-sort {
         padding: 60px 0;
 
@@ -369,6 +372,55 @@ a {
                 }
             }
         }
+    }
+}
+
+.portfolio-info-pop-up{
+    display: flex;
+    height: 100vh;
+    margin: 0;
+
+    .modal-content{
+        border: none;
+        border-radius: 0;
+    }
+
+    .modal-body{
+        figure,
+        img{
+            width: 100%;
+        }
+        padding-top: 0;
+
+        h5{
+            font-weight: 700;
+            font-size: 24px;
+            color: $primary-light;
+        }
+
+        p{
+            font-size: 16px;
+            color: $main-font;
+        }
+
+        a{
+            color: $primary-light;
+        }
+
+    }
+
+    .modal-header{
+        border-bottom: 0;
+
+        .close{
+            span{
+                color: $primary;
+            }
+        }
+    }
+
+    .modal-title{
+        color: $primary;
     }
 }
 
@@ -414,6 +466,7 @@ a {
 
                 img{
                     width: 100%;
+                    height: 100%;
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -1345,6 +1398,12 @@ a {
 
     .portfolio-section {
         padding-top: 40px;
+        &.web{
+            display: none;
+        }
+        &.mobile{
+            display: flex;
+        }
     }
 
     .portfolio-sort {
